--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         <a ng-click="setAnswer( ty )">{{ ty.name }}</a>
         -
         <a ng-click="setAnswer( yt )">{{ yt.name }}</a>
+         <br/>
+        {{ updateCount }}  kere fikir değiştirildi
     </p>
 </body>
 </html>
